# EmbroideryManager

./: .gitignore  CMakeLists.txt  CMakePresets.json  EmbroideryManager.manifest  EmbroideryManager.rc  File.h  LICENSE.md  Main.cpp  MainWindow.cpp  MainWindow.h  Precomp.h  README.md  VP3Embroidery.cpp  VP3Embroidery.h  VP3Painter.cpp  VP3Painter.h  VP3Viewer.cpp  VP3Viewer.h  resource.h  vcpkg.json
